--- a/TravailSession/TravailSession/MainWindow.xaml
+++ b/TravailSession/TravailSession/MainWindow.xaml
@@ -13,10 +13,12 @@
 
             <StackPanel Orientation="Vertical" >
 
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button x:Name="btListeTrajetAjd" Click="btListeTrajetAjd_Click">Liste trajets</Button>
-                    <Button x:Name="btCreationCompteChauffeur" Click="btCreationCompteChauffeur_Click">Création de compte (chauffeur)</Button>
-                    <Button x:Name="btCreationComptePassager" Click="btCreationComptePassager_Click">Création de compte (passager)</Button>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0, 15, 0, 10">
+                    <Button x:Name="btListeTrajetAjd" Click="btListeTrajetAjd_Click" Margin="5, 0, 5, 0" BorderBrush="Bisque" BorderThickness="3" Background="Bisque">Liste trajets</Button>
+                    <Button x:Name="btCreationCompteConducteur" Click="btCreationCompteConducteur_Click" Margin="5, 0, 5, 0" BorderBrush="Red" BorderThickness="3" Background="Red">Création de compte (conducteur)</Button>
+                    <Button x:Name="btCreationComptePassager" Click="btCreationComptePassager_Click" Margin="5, 0, 5, 0" BorderBrush="Blue" BorderThickness="3" Background="Blue">Création de compte (passager)</Button>
+                    <Button x:Name="btConnexion" Click="btConnexion_Click" Margin="5, 0, 5, 0" BorderBrush="Gold" BorderThickness="3" Background="Gold">Connexion</Button>
+                    <Button x:Name="btReservationTrajet" Click="btReservationTrajet_Click" Margin="5, 0, 5, 0" BorderBrush="Green" BorderThickness="3" Background="Green">Reserver un trajet</Button>
                 </StackPanel>
 
                 <Frame Name="mainFrame" />
