--- a/TravailSession/TravailSession/MainWindow.xaml
+++ b/TravailSession/TravailSession/MainWindow.xaml
@@ -19,6 +19,7 @@
                     <Button x:Name="btCreationComptePassager" Click="btCreationComptePassager_Click" Margin="5, 0, 5, 0" BorderBrush="Blue" BorderThickness="3" Background="Blue">Création de compte (passager)</Button>
                     <Button x:Name="btConnexion" Click="btConnexion_Click" Margin="5, 0, 5, 0" BorderBrush="Gold" BorderThickness="3" Background="Gold">Connexion</Button>
                     <Button x:Name="btReservationTrajet" Click="btReservationTrajet_Click" Margin="5, 0, 5, 0" BorderBrush="Green" BorderThickness="3" Background="Green">Reserver un trajet</Button>
+                    <Button x:Name="btAdmin" Click="btAdmin_Click" Margin="50, 0, 5, 0" BorderBrush="Purple" BorderThickness="3" Background="Purple">Admin</Button>
                 </StackPanel>
 
                 <Frame Name="mainFrame" />
