--- a/TravailSession/TravailSession/CreationCompteConducteur.xaml
+++ b/TravailSession/TravailSession/CreationCompteConducteur.xaml
@@ -26,6 +26,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <StackPanel>
@@ -62,7 +64,17 @@
                 <TextBox x:Name="mdp" Grid.Row="12" Width="500" Height="40" FontSize="15" HorizontalAlignment="Left" Margin="50, 10, 0, 0" BorderBrush="Red" BorderThickness="3"/>
                 <TextBlock x:Name="mdpErreur" Text="" FontSize="20" Margin="50, 0, 0, 0"/>
 
-                <Button x:Name="btCreationCompteConducteurFin" Click="btCreationCompteConducteurFin_Click" Content="Créer Compte" Grid.Row="13" Width="200" FontSize="25" HorizontalAlignment="Center" Margin="0, 20, 0, 25" BorderBrush="Red" BorderThickness="3"/>
+                <TextBlock Text="Type de Voiture" Grid.Row="13" FontSize="30" Margin="50, 20, 0, 0"/>
+                <ComboBox x:Name="typeVoiture" Header="Choisir votre type de voiture" Grid.Row="14" Margin="50, 10, 0, 0">
+                    <x:String>VUS</x:String>
+                    <x:String>Berline</x:String>
+                </ComboBox>
+                <TextBlock x:Name="typeVoitureErreur" Text="" FontSize="20" Margin="50, 0, 0, 0"/>
+
+                <TextBox x:Name="idVoituree" Grid.Row="12" Width="500" Height="40" FontSize="15" HorizontalAlignment="Left" Margin="50, 10, 0, 0" BorderBrush="Red" BorderThickness="3"/>
+                <TextBlock x:Name="idVoitureeErreur" Text="" FontSize="20" Margin="50, 0, 0, 0"/>
+
+                <Button x:Name="btCreationCompteConducteurFin" Click="btCreationCompteConducteurFin_Click" Content="Créer Compte" Grid.Row="15" Width="200" FontSize="25" HorizontalAlignment="Center" Margin="0, 20, 0, 25" BorderBrush="Red" BorderThickness="3"/>
 
             </StackPanel>
 
